RESOLVED FIXED274390
Fix visionOS build break after 278993@main
https://bugs.webkit.org/show_bug.cgi?id=274390
Summary Fix visionOS build break after 278993@main
Kimmo Kinnunen
Reported 2024-05-20 07:54:31 PDT
Fix visionOS build break after 278993@main
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-20 07:54:41 PDT
Kimmo Kinnunen
Comment 2 2024-05-20 07:57:03 PDT
EWS
Comment 3 2024-05-20 08:00:04 PDT
Committed 278994@main (32a7acf13b2b): <https://commits.webkit.org/278994@main> Reviewed commits have been landed. Closing PR #28789 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.