Fix visionOS build break after 278993@main https://bugs.webkit.org/show_bug.cgi?id=274390 rdar://128394997

Unreviewed, build fix.

Update visionOS code to use the renamed variable.

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::allocateImageBuffer):

Canonical link: https://commits.webkit.org/278994@main